set(TARGET log)

aux_source_directory(SRCS_DIR .)
add_library(${TARGET} INTERFACE)

install(
    TARGETS ${TARGET}
    ARCHIVE DESTINATION ${CMAKE_INSTALL_ARCDIR}
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)

file(GLOB ERRC_HEADER_FILES "*.h" "*.hpp")
install(FILES ${ERRC_HEADER_FILES} DESTINATION ${CMAKE_INSTALL_PREFIX}/include/${TARGET})
